--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     -->
     <title>React App</title>
   </head>
+  <head>
+  <meta name="description" content="Professional Portfolio - Web Developer & 3D Designer">
+  <meta property="og:title" content="Your Name - Portfolio">
+  <meta property="og:description" content="Creative web developer specializing in 3D experiences">
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
