--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     }
     </script>
     
-    <title>Web3 Developer - Blockchain & DeFi Specialist Portfolio</title>
+    <title>Laudza's portfolio</title>
     
     <style>
       * {
