--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Your Name",
-      "jobTitle": "Web3 Developer & Blockchain Enthusiast",
-      "description": "Professional blockchain developer specializing in smart contracts, DeFi protocols, and decentralized applications",
+      "name": "Laudza Kusuma",
+      "jobTitle": "Web3 Enthusiast & Vibe Coder",
+      "description": "Just Vibe Coder Who Build Innovational things",
       "url": "https://yourportfolio.vercel.app",
       "sameAs": [
         "https://github.com/yourusername",
